EMERGENCY FIX: Final asset path and case sensitivity standardization

--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,9 @@
 {
-    "version": 2,
-    "framework": "vite",
+    "cleanUrls": true,
     "rewrites": [
         {
-            "source": "/(.*)",
-            "destination": "/"
+            "source": "/assets/(.*)",
+            "destination": "/assets/$1"
         }
     ]
 }
