Final vercel config for asset visibility

--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
-    "cleanUrls": true,
     "rewrites": [
         {
             "source": "/assets/(.*)",
             "destination": "/assets/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
         }
     ]
 }
